--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -227,6 +227,7 @@
     <ClCompile Include="NewEngine\Object\2D\PostEffect.cpp" />
     <ClCompile Include="NewEngine\Object\2D\RenderTexture.cpp" />
     <ClCompile Include="NewEngine\Object\2D\Sprite.cpp" />
+    <ClCompile Include="NewEngine\Object\3D\BoundingBox.cpp" />
     <ClCompile Include="NewEngine\Object\3D\ParticleMesh.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Texture\DepthTexture.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Texture\ITexture.cpp" />
@@ -393,6 +394,7 @@
     <ClInclude Include="NewEngine\Object\2D\PostEffect.h" />
     <ClInclude Include="NewEngine\Object\2D\RenderTexture.h" />
     <ClInclude Include="NewEngine\Object\2D\Sprite.h" />
+    <ClInclude Include="NewEngine\Object\3D\BoundingBox.h" />
     <ClInclude Include="NewEngine\Object\3D\ParticleMesh.h" />
     <ClInclude Include="NewEngine\Object\Other\Texture\DepthTexture.h" />
     <ClInclude Include="NewEngine\Object\Other\Texture\ITexture.h" />
@@ -481,6 +483,7 @@
     <None Include="Application\Shader\Skydome.hlsli" />
     <None Include="Application\Shader\Vignette.hlsli" />
     <None Include="NewEngine\Shader\Blur.hlsli" />
+    <None Include="NewEngine\Shader\BoundingBox\BoundingBox.hlsli" />
     <None Include="NewEngine\Shader\CircleGaugeSprite\CircleGaugeSprite.hlsli" />
     <None Include="NewEngine\Shader\ColliderObject.hlsli" />
     <None Include="NewEngine\Shader\Emitter.hlsli" />
@@ -715,6 +718,14 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
     </FxCompile>
     <FxCompile Include="Application\Shader\VignetteVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\BoundingBox\BoundingBoxPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\BoundingBox\BoundingBoxVS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
     </FxCompile>
