--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -343,6 +343,9 @@
     <Filter Include="Shader\Engine\ParticleMesh">
       <UniqueIdentifier>{4908bbdd-ab21-4590-8e02-a06db5ffc383}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shader\Engine\BoundingBox">
+      <UniqueIdentifier>{d21196f9-28b1-4dea-97db-276762c69927}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
@@ -830,6 +833,9 @@
     </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\Billboard.cpp">
       <Filter>NewEngine\Source\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\3D\BoundingBox.cpp">
+      <Filter>Uncategorized\Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1358,6 +1364,9 @@
     <ClInclude Include="NewEngine\Object\Other\Billboard.h">
       <Filter>NewEngine\Header\Util</Filter>
     </ClInclude>
+    <ClInclude Include="NewEngine\Object\3D\BoundingBox.h">
+      <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="NewEngine\Shader\Blur.hlsli">
@@ -1465,6 +1474,9 @@
     </None>
     <None Include="NewEngine\Shader\Util\Util.hlsli">
       <Filter>Shader\Engine\Util</Filter>
+    </None>
+    <None Include="NewEngine\Shader\BoundingBox\BoundingBox.hlsli">
+      <Filter>Shader\Engine\BoundingBox</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -1683,6 +1695,12 @@
     </FxCompile>
     <FxCompile Include="NewEngine\Shader\ParticleMeshCS.hlsl">
       <Filter>Shader\Engine\ParticleMesh</Filter>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\BoundingBox\BoundingBoxVS.hlsl">
+      <Filter>Shader\Engine\BoundingBox</Filter>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\BoundingBox\BoundingBoxPS.hlsl">
+      <Filter>Shader\Engine\BoundingBox</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
