--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Application\SourceCode\UI\BossGaugeUI.cpp" />
     <ClCompile Include="Application\SourceCode\UI\IUI.cpp" />
     <ClCompile Include="Application\SourceCode\UI\PlayerGaugeUI.cpp" />
+    <ClCompile Include="Application\SourceCode\VolumetricFog.cpp" />
     <ClCompile Include="Application\SourceCode\Weapon\Club.cpp" />
     <ClCompile Include="Application\SourceCode\Field\Coffin.cpp" />
     <ClCompile Include="Application\SourceCode\CollisionManager.cpp" />
@@ -301,6 +302,7 @@
     <ClInclude Include="Application\SourceCode\UI\BossGaugeUI.h" />
     <ClInclude Include="Application\SourceCode\UI\IUI.h" />
     <ClInclude Include="Application\SourceCode\UI\PlayerGaugeUI.h" />
+    <ClInclude Include="Application\SourceCode\VolumetricFog.h" />
     <ClInclude Include="Application\SourceCode\Weapon\Club.h" />
     <ClInclude Include="Application\SourceCode\Field\Coffin.h" />
     <ClInclude Include="Application\SourceCode\CollisionManager.h" />
