処理が重くなっちゃった....

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="Application\SourceCode\CreateManager.cpp" />
     <ClCompile Include="Application\SourceCode\Effect\AirEffect.cpp" />
     <ClCompile Include="Application\SourceCode\Motion\BackstepMotion.cpp" />
+    <ClCompile Include="Application\SourceCode\Motion\BossAttack1Effect.cpp" />
     <ClCompile Include="Application\SourceCode\PostEffect\Bloom.cpp" />
     <ClCompile Include="Application\SourceCode\Character\Boss.cpp" />
     <ClCompile Include="Application\SourceCode\Motion\BossAttack3Motion.cpp" />
@@ -290,6 +291,7 @@
     <ClInclude Include="Application\SourceCode\Effect\AirEffect.h" />
     <ClInclude Include="Application\SourceCode\Motion\BackstepMotion.h" />
     <ClInclude Include="Application\SourceCode\Effect\BloodSprayEffect.h" />
+    <ClInclude Include="Application\SourceCode\Motion\BossAttack1Effect.h" />
     <ClInclude Include="Application\SourceCode\PostEffect\Bloom.h" />
     <ClInclude Include="Application\SourceCode\Character\Boss.h" />
     <ClInclude Include="Application\SourceCode\Motion\BossAttack3Motion.h" />
@@ -518,6 +520,24 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="Application\Shader\BGaussainBlurVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\BossAttack1Effect\BossAttack1EffectInitCS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\BossAttack1Effect\BossAttack1EffectUpdateCS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\BossAttack1Effect\BossAttack1EffectVS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
